syntax = "proto3";

option csharp_namespace = "SoapAdaptersCommon.GrpcAdapters";
option go_package = "github.com/kaltura/ott-client-sso-adapter-grpc-go";

service SSOAdapterGRPC {
	rpc SetConfiguration(SetConfigurationRequest) returns (SetConfigurationResponse);
	rpc GetConfiguration(GetConfigurationRequest) returns (GetConfigurationResponse);

	rpc PreSignIn(PreSignInRequest) returns (PreSignInResponse);
	rpc PostSignIn(PostSignInRequest) returns (UserResponse);

	rpc PreSignOut(PreSignOutRequest) returns (UserResponse);
	rpc PostSignOut(PostSignOutRequest) returns (UserResponse);

	rpc PreGetUserData(PreGetUserDataRequest) returns (UserResponse);
	rpc PostGetUserData(PostGetUserDataRequest) returns (UserResponse);

	rpc Invoke(InvokeRequest) returns (InvokeResponse);

	rpc AdjustRegionId(AdjustRegionIdRequest) returns (AdjustRegionIdResponse);
}

message SetConfigurationRequest{
	int32 PartnerId=1;
	int32 AdapterId=2;
	map<string, string> Configuration = 3;
	string Signature=4;

}
message SetConfigurationResponse{
	AdapterStatusCode AdapterStatusCode=1;
}



message GetConfigurationRequest{
	int32 AdapterId=1;
}

message GetConfigurationResponse{
	AdapterStatusCode AdapterStatusCode=1;
	repeated SSOMethods ImplementedMethods=2;
	bool SendWelcomeEmail=3;
}


message PreSignInRequest{
	int32 AdapterId=1;
	int32 UserId=2;
	string UserName=3;
	string Password=4;
	int32 MaxFailCount=5;
	int32 LockMin=6;
	int64 PartnerId=7;
	string SessionId=8;
	string IPAddress=9;
	string DeviceId=10;
	bool PreventDoubleLogin=11;
	map<string, string> CustomParams=12;
	string Signature=13;
}

message ListOfString{
    repeated string value = 1;
}

message PreSignInResponse{
	AdapterStatusCode AdapterStatusCode=1;
	int32 UserId=2;
	string Username=3;
	string Password=4;
	map<string, string> Priviliges=5;
	SSOResponseStatus SSOResponseStatus=9;
	map<string, ListOfString> SessionCharacteristics=10;
}


message PostSignInRequest{
	int32 AdapterId=1;
	User User=2;
	map<string, string> CustomParams=3;
	string Signature=4;
}

message UserResponse{
	AdapterStatusCode AdapterStatusCode=1;
	User User=2;
	SSOResponseStatus SSOResponseStatus=3;
}

message PreSignOutRequest{
	int32 AdapterId=1;
	string DeviceUdid=2;
	int32 HouseholdId=3;
	int32 UserId=4;
	string Signature=5;
	map<string, string> AdapterData=6;
}

message PostSignOutRequest{
	int32 AdapterId=1;
	User AuthenticatedUser=2;
	string DeviceUdid=3;
	int32 HouseholdId=4;
	int32 UserId=5;
	string Signature=6;
	map<string, string> AdapterData=7;
}

message PostGetUserDataRequest{
	int32 AdapterId=1;
	User UserData=2;
	map<string, string> CustomParams=3;
	string Signature=4;
}



message PreGetUserDataRequest{
	int32 AdapterId=1;
	int32 UserId=2;
	string IpAddress=3;
	map<string, string> CustomParams=4;
	string Signature=5;
}


message InvokeRequest{
	int32 AdapterId=1;
	string Intent=2;
	map<string, string> AdapterData=3;
}

message InvokeResponse{
	int32 AdapterStatus=1;
	SSOResponseStatus SSOResponseStatus=2;
	map<string, string> AdapterData=3;
	string Code=4;
	string Message=5;
}


message AdjustRegionIdRequest{
	int32 AdapterId=1;
	int32 DafaultRegionId=2;
	User OttUser=3;
	ListOfInt64 UserSegments=4;
	map<string, string> AdapterData=5;
}

message AdjustRegionIdResponse{
	AdapterStatusCode AdapterStatusCode=1;
	int32 RegionId=2;
	SSOResponseStatus SSOResponseStatus=3;
}

message ListOfInt64{
    repeated int64 value = 1;
}

enum AdapterStatusCode {
	OK = 0;
	Error = 1;
	SignatureMismatch = 2;
	NoConfigurationFound = 3;
}

message User{
	map<string, string> CustomParams=1;
	NullableBool IsHouseholdMaster=2;
	map<string, string> DynamicData=3;
	UserType UserType=4;
	string ExternalId=5;
	string Phone=6;
	string Zip=7;
	NullableInt32 CountryId=8;
	string City=9;
	string Address=10;
	string Email=11;
	NullableInt32 HouseholdID=12;
	string LastName=13;
	string FirstName=14;
	string Username=15;
	int32 Id=16;
	int32 SuspensionState=17;
	int32 UserState=18;
}


message UserType{
	int32 Id=1;
	string Description=2;
}

message SSOResponseStatus{
	SSOUserResponseStatus StatusCode=1;
	int32 ExternalCode=2;
	string ExternalMessage=3;

	enum SSOUserResponseStatus {
		OK = 0;
		UserExists = 1;
		UserDoesNotExist = 2;
		WrongPasswordOrUserName = 3;
		InsideLockTime = 4;
		NotImplementedYet = 5;
		UserNotActivated = 6;
		UserAlreadyLoggedIn = 7;
		UserDoubleLogIn = 8;
		SessionLoggedOut = 9;
		DeviceNotRegistered = 10;
		ErrorOnSendingMail = 11;
		UserEmailAlreadyExists = 12;
		ErrorOnUpdatingUserType = 13;
		UserTypeNotExist = 14;
		UserNotMasterApproved = 15;
		ErrorOnInitUser = 16;
		ErrorOnSaveUser = 17;
		UserNotIndDomain = 18;
		TokenNotFound = 19;
		UserAlreadyMasterApproved = 20;
		UserWithNoDomain = 21;
		LoginServerDown = 22;
		UserSuspended = 23;
		UserCreatedWithNoRole = 24;
		ExternalIdAlreadyExists = 25;
		ExternalError = 26;
		InternalError = 999;
	}
}

message NullableBool{
	bool Value=1;
}

message NullableInt32{
	int32 Value=1;
}


 enum SSOMethods {
	 PreSignIn = 0;
	 PostSignIn = 1;
	 PreGetUserData = 2;
	 PostGetUserData = 3;
	 PreSignOut = 4;
	 PostSignOut = 5;
	 Invoke = 6;
	 AdjustRegionId = 7;
 }